Fix bone block -> coal ore conversion